# generate_cicd

./: pre-commit  pyproject.toml
.github/workflows/: commit_stage.yml
docs/: basic_design.excalidraw  notes  reqs.md
generate_cicd/ci_file_generator/: generator.py
simple_app/: app.py  pyproject.toml
simple_app/docs/: reqs.md
simple_app/features/: feature.feature
simple_app/features/steps/: steps_feature.py
simple_app/tests/: test_hello.py
tests/: test_ci_file_generator.py
