[tool.poetry]
name = "generate-cicd"
version = "0.1.0"
description = "Automatic CI generator"
authors = ["peace <jose.s.contacto@gmail.com>"]
readme = "README.md"
packages = [{include = "generate_cicd"}]

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.3"
pytest-watch = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
