[tool.poetry]
name = "simple-app"
version = "0.1.0"
description = "Demo of a simple app"
authors = ["peace <jose.s.contacto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
