[tool.poetry]
name = "simple-app"
version = "0.1.0"
description = "Demo of a simple app"
authors = ["peace <jose.s.contacto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.commit]
optional = true

[tool.poetry.group.commit.dependencies]
pytest = "^8.0.0"
pylint = "^3.0.3"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
pytest = "^8.0.0"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
	"integration",	
]
